# PresetWeaver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CusManager.cpp  CusManager.h  Debug.h  DirectoryMonitor.cpp  DirectoryMonitor.h  FileInfo.cpp  FileInfo.h  OperatingSystemFunctions.h  main.cpp
ui/: app-window.slint
